--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.10.1",
     "webpack-dev-server": "^3.10.3"
   }
 }
